[gd_scene load_steps=21 format=3 uid="uid://cv7iq1acpijyy"]

[ext_resource type="Script" path="res://scripts/shield_moving.gd" id="1_5a0qo"]
[ext_resource type="Texture2D" uid="uid://dnyqs7dy10ey4" path="res://assets/bahan/star/collect1.png" id="2_aj2jo"]
[ext_resource type="Texture2D" uid="uid://cv7yavax2desh" path="res://assets/bahan/star/collect2.png" id="3_0rtmg"]
[ext_resource type="Texture2D" uid="uid://ccsd5bbpd0nki" path="res://assets/bahan/star/collect3.png" id="4_lg0vx"]
[ext_resource type="Texture2D" uid="uid://dtu444xoty4cd" path="res://assets/bahan/star/collect4.png" id="5_twmfi"]
[ext_resource type="Texture2D" uid="uid://btorg28pjdh02" path="res://assets/bahan/star/collect5.png" id="6_e4v2y"]
[ext_resource type="Texture2D" uid="uid://boam0dg2yj0tc" path="res://assets/bahan/star/collect6.png" id="7_j383h"]
[ext_resource type="Texture2D" uid="uid://cpuq56jufkwlv" path="res://assets/bahan/star/collect7.png" id="8_ymnmg"]
[ext_resource type="Texture2D" uid="uid://sugmlhgtt1y2" path="res://assets/bahan/star/collect8.png" id="9_s4too"]
[ext_resource type="Texture2D" uid="uid://dqukbfjc1jv8d" path="res://assets/bahan/star/collect9.png" id="10_l41ow"]
[ext_resource type="Texture2D" uid="uid://q0fyw33vyete" path="res://assets/bahan/star/collect10.png" id="11_3tsvk"]
[ext_resource type="Texture2D" uid="uid://cr2bw0nj7xwt4" path="res://assets/bahan/star/collect11.png" id="12_riul3"]
[ext_resource type="Texture2D" uid="uid://cxxuxekccg2h" path="res://assets/bahan/star/collect12.png" id="13_2yd3k"]
[ext_resource type="Texture2D" uid="uid://c457mh71flnqw" path="res://assets/bahan/star/collect13.png" id="14_q3coi"]
[ext_resource type="Texture2D" uid="uid://cnqqrhh0unsm0" path="res://assets/bahan/star/collect14.png" id="15_nrm4i"]
[ext_resource type="Texture2D" uid="uid://c7cu065v13ju2" path="res://assets/bahan/star/collect15.png" id="16_aa1rv"]
[ext_resource type="Texture2D" uid="uid://ic7invddrbfc" path="res://assets/bahan/star/collect16.png" id="17_w4j1h"]
[ext_resource type="Texture2D" uid="uid://bvanbgyrinu7c" path="res://assets/bahan/shield/shield with bubble.png" id="18_2b3se"]

[sub_resource type="SpriteFrames" id="SpriteFrames_wepi0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_aj2jo")
}, {
"duration": 1.0,
"texture": ExtResource("3_0rtmg")
}, {
"duration": 1.0,
"texture": ExtResource("4_lg0vx")
}, {
"duration": 1.0,
"texture": ExtResource("5_twmfi")
}, {
"duration": 1.0,
"texture": ExtResource("6_e4v2y")
}, {
"duration": 1.0,
"texture": ExtResource("7_j383h")
}, {
"duration": 1.0,
"texture": ExtResource("8_ymnmg")
}, {
"duration": 1.0,
"texture": ExtResource("9_s4too")
}, {
"duration": 1.0,
"texture": ExtResource("10_l41ow")
}, {
"duration": 1.0,
"texture": ExtResource("11_3tsvk")
}, {
"duration": 1.0,
"texture": ExtResource("12_riul3")
}, {
"duration": 1.0,
"texture": ExtResource("13_2yd3k")
}, {
"duration": 1.0,
"texture": ExtResource("14_q3coi")
}, {
"duration": 1.0,
"texture": ExtResource("15_nrm4i")
}, {
"duration": 1.0,
"texture": ExtResource("16_aa1rv")
}, {
"duration": 1.0,
"texture": ExtResource("17_w4j1h")
}],
"loop": false,
"name": &"collect",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_2b3se")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_x6p5p"]
radius = 24.0

[node name="shield_moving" type="Area2D"]
script = ExtResource("1_5a0qo")

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.315613, 0.315613)
sprite_frames = SubResource("SpriteFrames_wepi0")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_x6p5p")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D2" to="." method="_on_animated_sprite_2d_2_animation_finished"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
